--- a/Day1/index.html
+++ b/Day1/index.html
@@ -52,6 +52,7 @@
           <td onclick="add('.')">.</td>
           <td onclick="calculate()">=</td>
         </tr>
+        <td><input type="button" value="tan" onclick="tan(this.form.display)" style="height:100%;width:100%;"></td> s
       </table>
 
       <!--      <form>-->
