--- a/Day1/index.html
+++ b/Day1/index.html
@@ -1,68 +1,208 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Calculator</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="js/index.js"></script>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=EUC-KR" />
+  <title>Calculator</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="js/index.js"></script>
+</head>
+<body>
+<form>
+  <table border="1">
+    <tr>
+      <td colspan="5">
+        <input id="cal-show" type="text" id="display" size="50" value="0" />
+      </td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <input
+                type="button"
+                value="Clear"
+                onclick="clearDisplay()"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td colspan="3">
+        <input
+                type="button"
+                value="Enter"
+                onclick="sum()"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input
+                type="button"
+                value="1"
+                onclick="add('1')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="2"
+                onclick="add('2')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="3"
+                onclick="add('3')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="+"
+                onclick="add('+')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="tan"
+                onclick="tan(this.form.display)"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input
+                type="button"
+                value="4"
+                onclick="add('4')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="5"
+                onclick="add('5')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="6"
+                onclick="add('6')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="-"
+                onclick="add('-')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="sin"
+                onclick="sin(this.form.display)"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input
+                type="button"
+                value="7"
+                onclick="add('7')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="8"
+                onclick="add('8')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="9"
+                onclick="add('9')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="*"
+                onclick="add('*')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="cos"
+                onclick="cos(this.form.display)"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input
+                type="button"
+                value="0"
+                onclick="add('0')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="+/-"
+                onclick="abs(this.form.display)"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="."
+                onclick="add('.')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="/"
+                onclick="add('/')"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+      <td>
+        <input
+                type="button"
+                value="x^y"
+                onclick="pow(this.form.display)"
+                style="height: 100%; width: 100%"
+        />
+      </td>
+    </tr>
 
-  </head>
-  <body>
-    <div class="calculator">
-      <h1>Calculator</h1>
-      <hr />
-      <p>수식을 입력하고 계산 버튼을 누르시오.</p>
-      <br />
-      <table border="2">
-        <tr>
-          <td colspan="4">
-            <input type="text" id="exp"/>
-          </td>
-        </tr>
-        <tr>
-          <td colspan="4">
-            <input type="text" id="result" />
-          </td>
-        </tr>
-        <tr>
-          <td colspan="3" onclick="reset()">AC</td>
-          <td onclick="add('/')">/</td>
-        </tr>
-        <tr>
-          <td onclick="add(7)">7</td>
-          <td onclick="add(8)">8</td>
-          <td onclick="add(9)">9</td>
-          <td onclick="add('*')">*</td>
-        </tr>
-        <tr>
-          <td onclick="add(4)">4</td>
-          <td onclick="add(5)">5</td>
-          <td onclick="add(6)">6</td>
-          <td onclick="add('-')">-</td>
-        </tr>
-        <tr>
-          <td onclick="add(1)">1</td>
-          <td onclick="add(2)">2</td>
-          <td onclick="add(3)">3</td>
-          <td onclick="add('+')">+</td>
-        </tr>
-        <tr>
-          <td colspan="2" onclick="add(0)">0</td>
-          <td onclick="add('.')">.</td>
-          <td onclick="calculate()">=</td>
-        </tr>
-        <td><input type="button" value="tan" onclick="tan(this.form.display)" style="height:100%;width:100%;"></td> s
-      </table>
-
-      <!--      <form>-->
-      <!--        <label>식 </label>-->
-      <!--        <input type="text" id="exp" value="" /><br /><br />-->
-      <!--        <label>값 </label>-->
-      <!--        <input type="text" id="result" placeholder="0" />-->
-      <!--        <input type="button" value="계산" onclick="calculate()" />-->
-      <!--      </form>-->
-    </div>
-
-  </body>
+    <tr></tr>
+  </table>
+</form>
+</body>
 </html>
